<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HigherLowerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/higher_lower_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.432"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <ImageView
        android:id="@+id/ivDice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/dice_description"
        android:src="@drawable/dice1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.334" />

    <TextView
        android:id="@+id/tvLastThrow"
        android:layout_width="104dp"
        android:layout_height="29dp"
        android:text="@string/last_throw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivDice"
        app:layout_constraintVertical_bias="0.125" />

    <Button
        android:id="@+id/lowerBtn"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:text="@string/lower_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/equalsBtn"
        app:layout_constraintHorizontal_bias="0.727"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLastThrow"
        app:layout_constraintVertical_bias="0.833" />

    <Button
        android:id="@+id/equalsBtn"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="6dp"
        android:text="@string/equals_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/higherBtn"
        app:layout_constraintStart_toEndOf="@+id/lowerBtn"
        app:layout_constraintTop_toBottomOf="@+id/tvLastThrow"
        app:layout_constraintVertical_bias="0.916" />

    <Button
        android:id="@+id/higherBtn"
        android:layout_width="122dp"
        android:layout_height="50dp"
        android:layout_marginTop="84dp"
        android:text="@string/higher_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/equalsBtn"
        app:layout_constraintTop_toBottomOf="@+id/tvLastThrow"
        app:layout_constraintVertical_bias="0.833" />

</androidx.constraintlayout.widget.ConstraintLayout>